@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Apr 23 13:23:24 2003 -->
+<!-- Wed Apr 23 16:27:39 2003 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -293,105 +293,103 @@ Each variable definition below contains one or more examples.
 <td><a href="#HOSTNAME">HOSTNAME</a></td>
 </tr>
 <tr>
-<td><a href="#LOCALDATE">LOCALDATE</a></td>
 <td><a href="#LOGFILE_DEBUG">LOGFILE_DEBUG</a></td>
-</tr>
-<tr>
 <td><a href="#LOGFILE_INCOMING">LOGFILE_INCOMING</a></td>
+</tr>
+<tr>
 <td><a href="#LOGFILE_OUTGOING">LOGFILE_OUTGOING</a></td>
-</tr>
-<tr>
 <td><a href="#MAIL_TRANSFER_AGENT">MAIL_TRANSFER_AGENT</a></td>
+</tr>
+<tr>
 <td><a href="#MAX_AUTORESPONSES_PER_DAY">MAX_AUTORESPONSES_PER_DAY</a></td>
-</tr>
-<tr>
 <td><a href="#MESSAGE_FROM_STYLE">MESSAGE_FROM_STYLE</a></td>
+</tr>
+<tr>
 <td><a href="#MESSAGE_TAG_HEADER_STYLE">MESSAGE_TAG_HEADER_STYLE</a></td>
-</tr>
-<tr>
 <td><a href="#MYSQL_DATABASE">MYSQL_DATABASE</a></td>
+</tr>
+<tr>
 <td><a href="#MYSQL_ENABLED">MYSQL_ENABLED</a></td>
-</tr>
-<tr>
 <td><a href="#MYSQL_HOST">MYSQL_HOST</a></td>
+</tr>
+<tr>
 <td><a href="#MYSQL_PASSWORD">MYSQL_PASSWORD</a></td>
-</tr>
-<tr>
 <td><a href="#MYSQL_USER">MYSQL_USER</a></td>
+</tr>
+<tr>
 <td><a href="#OUTGOINGMAIL">OUTGOINGMAIL</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_BLACKLIST_APPEND">PENDING_BLACKLIST_APPEND</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_CACHE">PENDING_CACHE</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_CACHE_LEN">PENDING_CACHE_LEN</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_DELETE_APPEND">PENDING_DELETE_APPEND</a></td>
-</tr>
-<tr>
 <td><a href="#PENDING_RELEASE_APPEND">PENDING_RELEASE_APPEND</a></td>
+</tr>
+<tr>
 <td><a href="#PENDING_WHITELIST_APPEND">PENDING_WHITELIST_APPEND</a></td>
-</tr>
-<tr>
 <td><a href="#PRIMARY_ADDRESS_MATCH">PRIMARY_ADDRESS_MATCH</a></td>
+</tr>
+<tr>
 <td><a href="#PURGED_HEADERS">PURGED_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#RECIPIENT_DELIMITER">RECIPIENT_DELIMITER</a></td>
+</tr>
+<tr>
 <td><a href="#RECIPIENT_HEADER">RECIPIENT_HEADER</a></td>
-</tr>
-<tr>
 <td><a href="#RESPONSE_DIR">RESPONSE_DIR</a></td>
+</tr>
+<tr>
 <td><a href="#SENDER_TEMPLATE_VARS">SENDER_TEMPLATE_VARS</a></td>
-</tr>
-<tr>
 <td><a href="#SENDMAIL_PROGRAM">SENDMAIL_PROGRAM</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPAUTH_PASSWORD">SMTPAUTH_PASSWORD</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPAUTH_USERNAME">SMTPAUTH_USERNAME</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPHOST">SMTPHOST</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPSSL">SMTPSSL</a></td>
+</tr>
+<tr>
 <td><a href="#SMTPSSL_CERTFILE">SMTPSSL_CERTFILE</a></td>
-</tr>
-<tr>
 <td><a href="#SMTPSSL_KEYFILE">SMTPSSL_KEYFILE</a></td>
+</tr>
+<tr>
 <td><a href="#SMTP_MAX_SESSIONS_PER_CONNECTION">SMTP_MAX_SESSIONS_PER_CONNECTION</a></td>
-</tr>
-<tr>
 <td><a href="#SUMMARY_HEADERS">SUMMARY_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_CONFIRM">TAGS_CONFIRM</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_DATED">TAGS_DATED</a></td>
+</tr>
+<tr>
 <td><a href="#TAGS_KEYWORD">TAGS_KEYWORD</a></td>
-</tr>
-<tr>
 <td><a href="#TAGS_SENDER">TAGS_SENDER</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_DIR">TEMPLATE_DIR</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_DIR_MATCH_SENDER">TEMPLATE_DIR_MATCH_SENDER</a></td>
+</tr>
+<tr>
 <td><a href="#TEMPLATE_EMAIL_HEADERS">TEMPLATE_EMAIL_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TEMPLATE_ENCODED_HEADERS">TEMPLATE_ENCODED_HEADERS</a></td>
+</tr>
+<tr>
 <td><a href="#TERSE_SUMMARY_HEADERS">TERSE_SUMMARY_HEADERS</a></td>
-</tr>
-<tr>
 <td><a href="#TIMEOUT">TIMEOUT</a></td>
+</tr>
+<tr>
 <td><a href="#TMDAINJECT">TMDAINJECT</a></td>
-</tr>
-<tr>
 <td><a href="#USERNAME">USERNAME</a></td>
-<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 </tr>
 <tr>
+<td><a href="#USEVIRTUALDOMAINS">USEVIRTUALDOMAINS</a></td>
 <td><a href="#VIRTUALDOMAINS">VIRTUALDOMAINS</a></td>
-<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </tr>
+<tr>
+<td><a href="#X_TMDA_IN_SUBJECT">X_TMDA_IN_SUBJECT</a></td>
 </table>
 
 <dl>
@@ -1037,13 +1035,6 @@ Example:
 <code>HOSTNAME = "domain.dom"</code>
 <br><br>
 Defaults to the fully qualified domain name of the localhost.
-<dt><hr>
-<a name="LOCALDATE"><h4>LOCALDATE</h4></a>
-<dd>
-Set this variable to 0 if you want TMDA to generate ``Date:''
-headers in UTC instead of the local time zone.
-<br><br>
-Default is 1 (use local time zone)
 <dt><hr>
 <a name="LOGFILE_DEBUG"><h4>LOGFILE_DEBUG</h4></a>
 <dd>
