@@ -1,6 +1,9 @@
 2003-04-23  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
+	* Util.py (make_date): Don't import Defaults.LOCALDATE.
+	
 	* Defaults.py (TMDAINJECT): New variable.
+	(LOCALDATE): Removed.
 
 	* Util.py (gethostname): $TMDAHOST takes precedence.
 	(getfullname): $TMDANAME takes precedence.
